Adds jargeneratorautomation